/code-snippets/:id - fix word wrap in code blocks on safari

--- a/app/frontend/packs/styles/themes/syntax_highlighting.scss
+++ b/app/frontend/packs/styles/themes/syntax_highlighting.scss
@@ -10,6 +10,7 @@ $background: rgb(41, 42, 43);
   padding: 1em 1.1em;
   margin: 1em 0em 1.5em 0em;
   border-radius: 0.2em;
+  word-wrap: initial;
 
   table td {
     padding: 5px;
